--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,24 @@
 h1, p {
   font-family: Lato;
 }
+
+.navItem:hover
+{
+  background-color: rgba(207,35,56,1);
+}
+
+.link
+{
+  text-decoration: none;
+}
+
+.navLink
+{
+  color: #000000;
+  border: solid white 2px; 
+}
+
+.navLink:hover
+{
+  color: #ffffff; 
+}
