--- a/src/style.css
+++ b/src/style.css
@@ -1,27 +1,34 @@
-h1, p {
+h1,
+p {
   font-family: Lato;
 }
 
-.navItem:hover, .navLink:hover
-{
-  background-color: rgba(207,35,56,1);
+.nav-container {
+  margin-left: 20px;
+}
+
+.nav {
+  background-color: rgba(239, 241, 245, 1);
+}
+.logo {
+  width: 120px;
+}
+
+.navItem:hover,
+.navLink:hover {
+  background-color: rgba(207, 35, 56, 1);
   color: #ffffff;
 }
 
-.navItem .navLink .active
-{
-  background-color: rgba(207,35,56,1);
-  color: #ffffff;
-}
-
-
-.link
-{
+.link {
   text-decoration: none;
 }
 
-.navLink
-{
+.navLink {
   color: #000000;
-  border: solid white 2px; 
+  border: solid white 2px;
+}
+
+.name-asset {
+  color: red;
 }
