--- a/src/style.css
+++ b/src/style.css
@@ -14,21 +14,37 @@ p {
   width: 120px;
 }
 
-.navItem:hover,
-.navLink:hover {
-  background-color: rgba(207, 35, 56, 1);
-  color: #ffffff;
-}
-
-.link {
-  text-decoration: none;
-}
-
-.navLink {
-  color: #000000;
-  border: solid white 2px;
-}
-
 .name-asset {
   color: red;
 }
+
+.navItem {
+  padding: 10px;
+  border: solid white 2px;
+  color: #ffffff;
+  
+}
+.navLink {
+  color: #000000;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.navItem:hover > .navLink {
+  color: #ffffff;
+}
+
+.navItem:hover
+{
+  background-color: red;
+}
+
+
+.navItem .active
+{
+  background-color: red;
+  color: #ffffff;
+}
+
+
+
