--- a/src/style.css
+++ b/src/style.css
@@ -231,3 +231,71 @@ form.example button {
 .col-asset {
   width: 11%;
 }
+
+/*filter bar*/
+
+.fa.fa-filter {
+  position: absolute;
+  left: 89%;
+  border: 1px solid grey;
+  padding: 8px;
+  border-radius: 0px 5px 5px 0px;
+  z-index: -1;
+  top: 1%;
+}
+
+.filter-cate {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 1px;
+  text-overflow: '';
+  padding-left: 10px;
+  border-radius: 5px 0px 0px 5px;
+}
+
+.multiselect {
+  width: 200px;
+}
+
+.selectBox {
+  position: relative;
+}
+
+.selectBox .filter-cate {
+  font-size: 15px;
+  width: 179px;
+  height: 34px;
+}
+
+.overSelect {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+#checkboxes {
+  border: 1px #dadada solid;
+  width: 206px;
+  margin-left: 2px;
+  display: none;
+}
+
+#checkboxes label {
+  display: block;
+  padding-left: 5px;
+}
+
+#checkboxes label:hover {
+  background-color: rgba(207, 35, 56, 1);
+  color: #ffffff;
+}
+
+.checkboxlist {
+  margin-top: 5px;
+}
+
+.checkboxlist .checkbox {
+  margin: 5px;
+}
