--- a/src/SelectCate.css
+++ b/src/SelectCate.css
@@ -50,7 +50,6 @@
 }
 
 .checkboxlist {
-  margin-top: 5px;
   padding: 5px 5px 10px 10px;
 }
 
@@ -73,4 +72,8 @@
 .fa.fa-times {
   color: black;
   margin-left: 5px;
+}
+
+hr {
+  margin: 0px;
 }
